--- a/html/css/main.css
+++ b/html/css/main.css
@@ -20,12 +20,12 @@ td, th { padding: 2px 4px }
 .flag {
     width: 16px;
     height: 11px;
-    background: url("../images/flags.png") no-repeat;
+    background: url("../images/thirdparty/flags.png") no-repeat;
     display: inline-block;
     /*margin-bottom: 2px;*/
     overflow: hidden; 
 }
 .flag.flag-unknown {
-    background: url("../images/unknown.png") no-repeat;
+    background: url("../images/thirdparty/unknown.png") no-repeat;
 }
 .right { margin-left: auto; text-align: right }
